--- a/public/css/template.css
+++ b/public/css/template.css
@@ -227,11 +227,13 @@ a:hover{
 /* X tela - home X */
 
 .textDiv{
+    max-width: 290px;
     word-break:normal;
-
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
+    -moz-line-clamp: 2;
+    -moz-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
 }
